# gui_test_framework

./: .gitignore  Cargo.toml  README.md
image_processing/: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
image_processing/include/: args.h  item.h  request.h  response.h
image_processing/src/: args.cpp  item.cpp  request.cpp  response.cpp
src/: capture.rs  error.rs  graphical.rs  item.rs  items.rs  liana_item.rs  liana_store.rs  main.rs  ocr.rs  screenshot.rs  store.rs  widget_detector.rs
