[package]
name = "lianaauto_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.4.0"
rusty-tesseract = "1.1.9"
x11 = "2.21.0"
image = "0.22.5"
ocrs = "0.5.0"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.116"
