[package]
name = "lianaauto_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.4.0"

x11 = "2.21.0"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.116"
imageproc = "0.24.0"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "webp"] }
ocrs = {git = "https://github.com/robertknight/ocrs", rev = "ea67c9e70adf834e8a8632e50845b51fb38b1bc7"}
rten = "0.8.0"
rten-tensor = "0.8.0"
lexopt = "0.3.0"
